Complete full project

--- a/styles/style.css
+++ b/styles/style.css
@@ -142,3 +142,129 @@
 	background-color: #fff;
 	color: #000;
 }
+/*Appointment*/
+.appointment{
+	display: flex;
+	width: 75%;
+	background-color: orangered;
+	justify-content: center;
+	align-items: center;
+	margin: -70px auto 0 auto;
+	padding: 30px;
+	border-radius:5px;
+}
+.appointment-call{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-right: 2px solid gray;
+	padding: 15px;
+}
+.appointment-call img{
+	width: 90px;
+}
+.appointment-description{
+	line-height: 20px;
+	font-size: 16px;
+	padding: 10px;
+}
+/*Blog style*/
+.blog{
+	text-align: center;
+	padding: 40px 0;
+}
+.blog-title{
+	font-size: 40px;
+	margin-bottom: 10px;
+
+}
+.blog-description{
+	width: 50%;
+	line-height: 22px;
+	margin: 0 auto;
+	font-size: 22px;
+	margin-bottom: 20px;
+}
+.blog-box{
+	display: flex;
+	justify-content: space-around;
+}
+.blog1{
+	width: 300px;
+	height: 380px;
+	background-color: #fff;
+	box-shadow: 4px 4px 8px grey;
+	color: #000;
+	border-radius: 5px;
+}
+.blog1 img{
+	width: 100%;
+	border-radius: 5px;
+}
+.blog1 h2{
+	margin-bottom: 10px;
+	padding: 10px;
+	font-size: 24px;
+}
+.blog1 p{
+	line-height: 22px;
+	padding: 0 10px 20px;
+}
+/*footer section*/
+.footer{
+	background-image: url('../asset/image/footer-bg.png'),linear-gradient(45deg, rgba(0,0,0,.8),rgba(0,0,0,0.9));
+	background-blend-mode:overlay;
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+	color: #fff;
+	padding: 5px 0;
+}
+.footer-container{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 75%;
+	margin: 0 auto;
+	padding: 20px 0;
+	border-bottom: 1px solid gray;
+}
+.logo-box{
+	width: 25%;
+}
+.logo-box img{
+	margin-bottom: 20px;
+}
+.logo-box p{
+	line-height: 22px;
+	margin-bottom: 20px;
+}
+.footer-icon i{
+	font-size: 22px;
+	margin-right: 20px;
+}
+.footer-title{
+	margin-bottom: 30px;
+}
+.footer-list li {
+	list-style: none;
+}
+.footer-list li a{
+	margin-bottom: 10px;
+	display: inline-block;
+	color: #fff;
+	text-decoration: none;
+}
+.footer-links, .footer-supports, .footer-contact{
+	margin-top: 30px;
+} 
+.footer-contact i{
+	margin-right: 5px;
+}
+.footer-contact address p{
+	margin-bottom: 10px;
+}
+.footer-copy{
+	text-align: center;
+	margin-top: 20px;
+}
